<resources>
    <string name="app_name">JobPortal</string>
    <string name="google_maps_key">AIzaSyATmFLxTSTKvL65UnnYIfoJUiVPiCJcM6c</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="as_job_seeker">As Job Seeker</string>
    <string name="home">HOME</string>
    <string name="home_small">Home</string>
    <string name="saved_jobs">SAVED JOBS</string>
    <string name="saved_jobs_small">Saved Jobs</string>
    <string name="record">RECORD</string>
    <string name="record_small">Record</string>
    <string name="my_schedule">MY SCHEDULE</string>
    <string name="my_schedule_small">My Schedule</string>
    <string name="letters">LETTERS</string>
    <string name="letters_small">Letters</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_small">Settings </string>
    <string name="profile">Profile</string>
    <string name="verified_user">Verified User</string>
    <string name="verified_email">Verified Email</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="fields_study">Fields of Study:</string>
    <string name="accomplishments">Accomplishments</string>
    <string name="language">LANGUAGE</string>
    <string name="project">PROJECT</string>
    <string name="organization">ORGANIZATION</string>
    <string name="certification">CERTIFICATION</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="add_experience">Add Experience</string>
    <string name="edit_experience">Edit Experience</string>
    <string name="title">Title</string>
    <string name="company_name">Company Name</string>
    <string name="location">Location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="year">Year</string>
    <string name="Present">Present</string>
    <string name="currently_working_here">Currently working here</string>
    <string name="description">Description</string>
    <string name="add_education">Add Education</string>
    <string name="edit_education">Edit Education</string>
    <string name="institution">Institution/University</string>
    <string name="degree">Degree</string>
    <string name="field_of_study">Field of Study</string>
    <string name="start_year">Start Year</string>
    <string name="end_year">End Year</string>
    <string name="grade">Grade</string>
    <string name="or_expected_graduation">Or expected graduation</string>
    <string name="add_accomplishment">Add Accomplishment</string>
    <string name="accomplishment_title">Accomplishment Title</string>
    <string name="accomplishment">Accomplishment</string>
    <string name="organization_small">Organization</string>
    <string name="language_small">Language</string>
    <string name="proficiency">Proficiency</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personnel_position">Personnel Position</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_caps">SCHEDULE</string>
    <string name="about_us">About US</string>
    <string name="about_us_small">About Us</string>
    <string name="seniority_level">Seniority Level :</string>
    <string name="required_skill">Required Skill :</string>
    <string name="year_of_experience">Years of Experience :</string>
    <string name="employment_type">Employment Type :</string>
    <string name="employment_type_hint">Employment Type</string>
    <string name="ignore">Ignore</string>
    <string name="reach">Reach</string>
    <string name="view">View</string>
    <string name="company_email">Company Email</string>
    <string name="address">Address</string>
    <string name="scientroncs">Scientroncs</string>
    <string name="app_developer">App Developer :</string>
    <string name="stage_1_phone_interview">Stage 1 : Phone Interview</string>
    <string name="you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="please_leave_a_message_to_scientronics_limited">Please leave a message to Scientronics Limited</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="offers">Offers</string>
    <string name="rejction">Rejections</string>
    <string name="dashboard">Dashboard</string>
    <string name="interested">Interested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="alexandros_papatheodoulou">Alexandros Papatheodoulou</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="rejection_header">Rejection Letter</string>
    <string name="account_setting">Account Settings</string>
    <string name="set_preferences">Set Preferences</string>
    <string name="subscription">Subscription</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="offer_letter">Offer Letter</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_sub_title">Passwords are case-sensetive and must be at least \n6 characters</string>
    <string name="current">Current</string>
    <string name="new_password">New Password</string>
    <string name="new_text">New</string>
    <string name="current_password">Current Password</string>
    <string name="verify">Verify</string>
    <string name="new_password_again">New Password Again</string>
    <string name="save">Save</string>
    <string name="change_email">Change Email</string>
    <string name="show_me_on_be_reached">Show me on Be-Reached</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_sub_title_one">You have the option to hide your profile instead. \nYou can find this option in settings.</string>
    <string name="proceed">Proceed</string>
    <string name="sb_based_on">Set your dashboard preferences based on :</string>
    <string name="job_field">Job Field</string>
    <string name="cyprus">Cyprus</string>
    <string name="verify_profile">Verify Profile</string>
    <string name="email_verification_text">Enter your email address to receive \n a verification code</string>
    <string name="enter_email">Enter Email</string>
    <string name="verification_code">Please enter the verification code sent \n to your email</string>
    <string name="enter_verificaation_code">Enter Verification Code</string>
    <string name="enter">Enter</string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="version">Version</string>
    <string name="chat">Chat</string>
    <string name="splash_subtitle">Advance your career \n using be-reached</string>
    <string name="search_job">Search Job</string>
    <string name="update">Update</string>
    <string name="browse_candidates">BROWSE CANDIDATES</string>
    <string name="browse_candidates_small">Browse Candidates</string>
    <string name="saved_shortlisted_profiles">SAVED / SHORTLISTED PROFILES</string>
    <string name="create_a_job">CREATE A JOB</string>
    <string name="create_a_job_small">Create a Job</string>
    <string name="job_listing">JOB LISTING</string>
    <string name="job_listing_small">Job Listing</string>
    <string name="stages">STAGES</string>
    <string name="stages_small">Stages</string>
    <string name="saved_title">Saved</string>
    <string name="shortlist_title">Shortlisted</string>
    <string-array name="begain_title">
        <item>Reach the right people, \n get closer to your dream job</item>
        <item>Set up your profile or simply \n upload your CV.</item>
        <item>Use swiping to like or pass a job</item>
        <item>If the company likes you back, you.ve been reached!</item>
        <item>Once reached, chat instantly with your potential \n employer and schedule your meetings.</item>
        <item>Get the appropriate notifications through be-reach to enhance \n your user experience</item>
    </string-array>
    <string-array name="begain_title_two">
        <item>Android Developer</item>
        <item>Web Designer</item>
        <item>ios Developer</item>
        <item>PHP Developer</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="shortlist">Shortlist</string>
    <string name="reconsider">Reconsider</string>
    <string name="delete">Delete</string>
    <string name="igonred_caps">IGONRED</string>
    <string name="company_details">Company Details</string>
    <string name="company_size">Company Size</string>
    <string name="year_founded">Year Founded</string>
    <string name="import_candidate">Import Candidate</string>
    <string name="job_title">Job Title</string>
    <string name="seniorty_level">Seniority Level</string>
    <string name="required_skills">Required Skill</string>
    <string name="clear">Clear</string>
    <string name="stop">Stop</string>
    <string name="advance">Advance</string>
    <string name="reject">Reject</string>
    <string name="make_an_offer">Make an Offer</string>
    <string name="candidate_name">Candidate Name :</string>
    <string name="job_position">Job Position :</string>
    <string name="salary">Salary :</string>
    <string name="personal_message">Personal Message :</string>
    <string name="review_amp_send"><![CDATA[Review & Send]]></string>
    <string name="send">Send</string>
    <string name="rejection_letter">Rejection Letter</string>
    <string name="reschedule">Reschedule</string>
    <string name="delete_plan">Delete Plan</string>
    <string name="set">Set</string>
    <string name="reschedule_end_time">Reschedule End Time</string>
    <string name="reschedule_start_time">Reschedule Start Time</string>
    <string name="leave_a_message_to_maria_theofanous">Leave a message to Maria Theofanous</string>
    <string name="inbox">Inbox</string>
    <string name="email_valid">Email is Empty</string>
    <string name="pswd_valid">Password id Empty</string>
    <string name="cmp_name_valid">Company Name is Empty</string>
    <string name="cmp_size_valid">Company Size is Empty</string>
    <string name="cmp_email_valid">Company Email is Empty</string>
    <string name="cmp_phone_valid">Company Pnone Number is Empty</string>
    <string name="persnl_posi_valid">Personnel Position is Empty</string>
    <string name="mobile_no_valid">Mobile Number is Empty</string>
    <string name="addres_one_valid">Address One is Empty</string>
    <string name="address_two_valid">AAddress Two is Empty</string>
    <string name="city_valid">City is Empty</string>
    <string name="cnf_pswd_valid">Confirm Password is Miss Match</string>
    <string name="name_valid">Name is Empty</string>
    <string name="surname_valid">Surname is Empty</string>
    <string name="age_valid">Age is Empty</string>
</resources>