<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/home">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />

    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/saved_jobs">
        <item
            android:id="@+id/nav_saved_jobs"
            android:icon="@drawable/saved_jobs_icon"
            android:title="@string/saved_jobs" />

    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/record">
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/record_icon"
            android:title="@string/record" />

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/schedule">
        <item
            android:id="@+id/nav_my_schedule"
            android:icon="@drawable/my_schedule_icon"
            android:title="@string/my_schedule" />

    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/letter">
        <item
            android:id="@+id/nav_letters"
            android:icon="@drawable/letter_icon"
            android:title="@string/letters" />

    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting_icon"
            android:title="@string/settings" />

    </group>



</menu>
