<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:background="@drawable/background_box_setting">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/delete_account"
                android:textAlignment="center"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBlackOne"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/margin_right_two"
            android:layout_marginLeft="@dimen/margin_left_two">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_sub_title_one"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="@dimen/margin_right_two"
            android:layout_marginLeft="@dimen/margin_left_two"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/txt_subtitle_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/btn_cancel_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/normal_text"
                android:background="@color/colorBlue"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/btn_proceed_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/normal_text"
                android:text="@string/proceed"
                android:textColor="@color/colorWhite"
                android:background="@color/colorHeader"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>