<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:background="@android:color/transparent"
    android:layout_gravity="center"

    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_line_schedule_delete"
        android:orientation="vertical"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/you_want_to_delete"
                android:textColor="@color/colorBlackTwo"
                android:textAlignment="center"/>

            <View
                android:layout_width="250dp"
                android:layout_height="0.2dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:background="@color/colorBlackTwo"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/colorBlackOne"
                android:text="@string/please_leave_a_message_to_scientronics_limited"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/background_box_schedule_delete">


            <EditText
                android:id="@+id/edt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="@dimen/normal_text"
                android:textAllCaps="false"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlueOne"/>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="@dimen/normal_text"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:text="@string/submit"
                android:background="@color/colorBlueOne"/>



        </LinearLayout>


    </LinearLayout>

</LinearLayout>