<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:src="@drawable/back_icon" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_experience"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/header_text" />

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:src="@drawable/upload_icon" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorBlackOne"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlackOne"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textColor="@color/colorBlackOne"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company_name"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlackOne"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/colorBlackOne"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:background="@android:color/transparent"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlackOne"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

</LinearLayout>